✨ add update functionality to user profile
