# backend/src/routes/userRoutes.js
@@ -8,11 +8,13 @@ const {
   registerValidation,
   loginValidation,
   updateValidation,
+  updatePasswordValidation
 } = require("../validators/userValidation");
 
 router.post("/login", validate(loginValidation), userController.login);
 router.post("/register", validate(registerValidation), userController.register);
-router.put("/update", validate(updateValidation), auth, userController.update);
+router.patch('/update-password', auth, validate(updatePasswordValidation), userController.update_password);
+router.put("/update", auth, validate(updateValidation), userController.update);
 router.delete("/delete/:id", auth, isSuperuser, userController.delete);
 
 router.get("/me", auth, userController.getMe);
